<resources>
    <string name="app_name">MobileTest</string>
    <string name="content_description">image</string>

    <string name="action_settings">Settings</string>
    <!-- Strings used for fragments for navigation -->
    <string name="post">Posts</string>
    <string name="all">ALL</string>
    <string name="favorites">FAVORITES</string>
    <string name="next">Next</string>
    <string name="previous">Previous</string>
    <string name="loading_error">Error loading information</string>
    <string name="try_again">Try Again</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="user">User</string>
    <string name="name">Name</string>
    <string name="email">Email</string>
    <string name="phone">Phone</string>
    <string name="website">Website</string>
    <string name="comments">COMMENTS</string>
    <string name="post_removed">Post removed!</string>
    <string name="posts_removed">All Post removed!</string>

</resources>